# BoN-scripts

./: README.md  requirements.txt
challenge1/: sprinter.py
challenge2/: README.md  sprinter.py
challenge3/sprinter-rs/: Cargo.toml  Makefile  README.md
challenge3/sprinter-rs/src/: cli.rs  lib.rs  main.rs  utils.rs
challenge3/sprinter-rs/src/commands/: create_wallets.rs  mod.rs  transfer_all_cross_shards.rs  transfer_all_shards.rs  transfer_cross_shard.rs  transfer_intrashard.rs
challenge3/sprinter-rs/src/tui/: app.rs  mod.rs  stats.rs  ui.rs
challenge3/sprinter-rs/src/wallet/: entry.rs  mod.rs  queue.rs
challenge3/sprinter-rs/tests/: integration_test.rs
challenge4/sprinter-rs/: Cargo.toml  README.md  network-example.toml
challenge4/sprinter-rs/src/: cli.rs  main.rs  network_config.rs
challenge4/sprinter-rs/src/blockchain/: mod.rs  nonce.rs
challenge4/sprinter-rs/src/blockchain/transaction/: broadcast.rs  mod.rs  sender.rs  signer.rs
challenge4/sprinter-rs/src/commands/: call_contract.rs  challenge4.rs  check_wallets.rs  collect.rs  create_wallets.rs  deploy_contract.rs  fund.rs  mod.rs  swap_dex.rs  transfer_all_cross_shards.rs  transfer_all_shards.rs  transfer_cross_shard.rs  transfer_intrashard.rs
challenge4/sprinter-rs/src/tui/: app.rs  mod.rs  stats.rs  ui.rs
challenge4/sprinter-rs/src/wallet/: entry.rs  mod.rs  transaction.rs
challenge5/: Dockerfile  create_wallets.sh  docker-compose.yml  fund_wallets.sh  monitor.sh  register.sh  start_agents.sh
challenge5/skills/spam-skill/: .env.example  .gitignore  SKILL.md
(+12 files in other folders)
