[package]
name = "sprinter"
version = "0.1.0"
edition = "2021"

[dependencies]
multiversx-sdk = "0.15.1"
multiversx-sdk-http = "0.15.1"
multiversx-chain-core = "0.22.1"
tokio = { version = "1", features = ["full", "sync"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "blocking"] }
anyhow = "1"
hex = "0.4"
rand = "0.8"
ed25519-dalek = { version = "2", features = ["rand_core"] }
futures = "0.3"
num-bigint = "0.4"
async-trait = "0.1"
ratatui = "0.29"
crossterm = "0.28"
atty = "0.2"
chrono = "0.4"
lazy_static = "1"
base64 = "0.22.1"
toml = "1"
rayon = "1"
sha3 = "0.10"

[dev-dependencies]
bech32 = "0.11"
